core/codegen/tests/ui-fail-stable/typed-uris-bad-params.stderr
error: path parameters cannot be ignored
  --> $DIR/typed-uris-bad-params.rs:55:37
   |
55 |     uri!(optionals: id = 10, name = _);
   |                                     ^

error: path parameters cannot be ignored
  --> $DIR/typed-uris-bad-params.rs:53:26
   |
53 |     uri!(optionals: id = _, name = "bob".into());
   |                          ^

error: invalid parameters for `has_two` route uri
  --- note: uri parameters are: id: i32, name: String
  --- help: missing parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:51:19
   |
51 |     uri!(has_two: id = 100, cookies = "hi");
   |                   ^^

error: [help] unknown parameter: `cookies`
  --> $DIR/typed-uris-bad-params.rs:51:29
   |
51 |     uri!(has_two: id = 100, cookies = "hi");
   |                             ^^^^^^^

error: invalid parameters for `has_two` route uri
  --- note: uri parameters are: id: i32, name: String
  --- help: missing parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:49:19
   |
49 |     uri!(has_two: cookies = "hi", id = 100, id = 10, id = 10);
   |                   ^^^^^^^

error: [help] unknown parameter: `cookies`
  --> $DIR/typed-uris-bad-params.rs:49:19
   |
49 |     uri!(has_two: cookies = "hi", id = 100, id = 10, id = 10);
   |                   ^^^^^^^

error: [help] duplicate parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:49:45
   |
49 |     uri!(has_two: cookies = "hi", id = 100, id = 10, id = 10);
   |                                             ^^

error: invalid parameters for `has_two` route uri
  --- note: uri parameters are: id: i32, name: String
  --- help: missing parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:47:19
   |
47 |     uri!(has_two: name = "hi");
   |                   ^^^^

error: invalid parameters for `has_two` route uri
  --- note: uri parameters are: id: i32, name: String
  --- help: missing parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:45:19
   |
45 |     uri!(has_two: id = 100, id = 100, );
   |                   ^^

error: [help] duplicate parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:45:29
   |
45 |     uri!(has_two: id = 100, id = 100, );
   |                             ^^

error: invalid parameters for `has_one_guarded` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:43:27
   |
43 |     uri!(has_one_guarded: id = 100, cookies = "hi");
   |                           ^^

error: [help] unknown parameter: `cookies`
  --> $DIR/typed-uris-bad-params.rs:43:37
   |
43 |     uri!(has_one_guarded: id = 100, cookies = "hi");
   |                                     ^^^^^^^

error: invalid parameters for `has_one_guarded` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:41:27
   |
41 |     uri!(has_one_guarded: cookies = "hi", id = 100);
   |                           ^^^^^^^

error: [help] unknown parameter: `cookies`
  --> $DIR/typed-uris-bad-params.rs:41:27
   |
41 |     uri!(has_one_guarded: cookies = "hi", id = 100);
   |                           ^^^^^^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --- help: missing parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:39:19
   |
39 |     uri!(has_one: name = "hi");
   |                   ^^^^

error: [help] unknown parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:39:19
   |
39 |     uri!(has_one: name = "hi");
   |                   ^^^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:37:19
   |
37 |     uri!(has_one: id = 100, id = 100, );
   |                   ^^

error: [help] duplicate parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:37:29
   |
37 |     uri!(has_one: id = 100, id = 100, );
   |                             ^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:35:19
   |
35 |     uri!(has_one: id = 100, id = 100);
   |                   ^^

error: [help] duplicate parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:35:29
   |
35 |     uri!(has_one: id = 100, id = 100);
   |                             ^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:33:19
   |
33 |     uri!(has_one: name = 100, age = 50, id = 100, id = 50);
   |                   ^^^^

error: [help] unknown parameters: `name`, `age`
  --> $DIR/typed-uris-bad-params.rs:33:19
   |
33 |     uri!(has_one: name = 100, age = 50, id = 100, id = 50);
   |                   ^^^^

error: [help] duplicate parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:33:51
   |
33 |     uri!(has_one: name = 100, age = 50, id = 100, id = 50);
   |                                                   ^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:31:19
   |
31 |     uri!(has_one: name = 100, age = 50, id = 100);
   |                   ^^^^

error: [help] unknown parameters: `name`, `age`
  --> $DIR/typed-uris-bad-params.rs:31:19
   |
31 |     uri!(has_one: name = 100, age = 50, id = 100);
   |                   ^^^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:29:19
   |
29 |     uri!(has_one: name = 100, id = 100);
   |                   ^^^^

error: [help] unknown parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:29:19
   |
29 |     uri!(has_one: name = 100, id = 100);
   |                   ^^^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:27:19
   |
27 |     uri!(has_one: id = 100, name = "hi");
   |                   ^^

error: [help] unknown parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:27:29
   |
27 |     uri!(has_one: id = 100, name = "hi");
   |                             ^^^^

error: `has_two` route uri expects 2 parameters but 1 was supplied
  --- note: expected parameters: id: i32, name: String
  --> $DIR/typed-uris-bad-params.rs:25:19
   |
25 |     uri!(has_two: 10);
   |                   ^^

error: `has_two` route uri expects 2 parameters but 3 were supplied
  --- note: expected parameters: id: i32, name: String
  --> $DIR/typed-uris-bad-params.rs:24:19
   |
24 |     uri!(has_two: 10, "hi", "there");
   |                   ^^

error: `has_one_guarded` route uri expects 1 parameter but 2 were supplied
  --- note: expected parameter: id: i32
  --> $DIR/typed-uris-bad-params.rs:22:27
   |
22 |     uri!(has_one_guarded: "hi", 100);
   |                           ^^^^

error: `has_one` route uri expects 1 parameter but 2 were supplied
  --- note: expected parameter: id: i32
  --> $DIR/typed-uris-bad-params.rs:21:19
   |
21 |     uri!(has_one: "Hello", 23, );
   |                   ^^^^^^^

error: `has_one` route uri expects 1 parameter but 2 were supplied
  --- note: expected parameter: id: i32
  --> $DIR/typed-uris-bad-params.rs:20:19
   |
20 |     uri!(has_one: 1, 23);
   |                   ^

error: `has_one` route uri expects 1 parameter but 0 were supplied
  --- note: expected parameter: id: i32
  --> $DIR/typed-uris-bad-params.rs:18:10
   |
18 |     uri!(has_one);
   |          ^^^^^^^
